--- a/.github/workflows/uploadfiles_app-backend-zkrnwcgqiomq6.yml
+++ b/.github/workflows/uploadfiles_app-backend-zkrnwcgqiomq6.yml
@@ -27,9 +27,9 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      - name: Install dependencies
-        working-directory: ./app/backend
-        run: pip install -r requirements.txt
+      # - name: Install dependencies
+      #   working-directory: ./app/backend
+      #   run: pip install -r requirements.txt
 
       - name: Install Node.js
         uses: actions/setup-node@v2
